# dnsdisc

./: Cargo.toml
examples/: query.rs  request.rs
src/: lib.rs
src/backend/: memory.rs  mod.rs  trust_dns.rs
