[package]
name = "dnsdisc"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
description = "Ethereum's Node Discovery via DNS (EIP-1459)"
license = "Apache-2.0"

[dependencies]
arrayvec = "0.5"
async-stream = "0.3"
async-trait = "0.1"
data-encoding = "2"
derive_more = "0.99"
enr = { git = "https://github.com/rust-ethereum/enr", default-features = false, features = ["k256"] }
k256 = { version = "0.5", features = ["ecdsa", "keccak256"] }
maplit = "1"
sha3 = "0.9"
signature = { version = "1", features = ["std"] }
tokio = { version = "0.2", features = ["stream"] }
tracing = "0.1"
tracing-futures = "0.2"
trust-dns-resolver = { version = "0.19", optional = true }

[dev-dependencies]
hex = "0.4"
tokio = { version = "0.2", features = ["full"] }
tracing-subscriber = "0.2"

[features]
trust-dns = ["trust-dns-resolver"]

[[example]]
name = "query"
required-features = ["trust-dns"]
